[gd_scene load_steps=4 format=3 uid="uid://34etiyxaw00e"]

[ext_resource type="Script" path="res://Bullet.gd" id="1_o52gl"]
[ext_resource type="Texture2D" uid="uid://cnmopp8qvmcxu" path="res://assets/laser.png" id="2_6mea8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_itadm"]
radius = 2.0
height = 28.0

[node name="Bullet" type="Area2D"]
position = Vector2(3, 0)
script = ExtResource("1_o52gl")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_6mea8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_itadm")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
